--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "8.4.24",
     "prisma": "^4.16.2",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "daisyui": "^3.1.7"
   }
 }
